--- a/Banner/Banner/Base.lproj/Main.storyboard
+++ b/Banner/Banner/Base.lproj/Main.storyboard
@@ -17,9 +17,42 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TL0-wm-470">
+                                <rect key="frame" x="51" y="318.5" width="86" height="30"/>
+                                <state key="normal" title="Load banner"/>
+                                <connections>
+                                    <action selector="loadBanner:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XJU-Xh-OW3"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8cT-3e-Jl8">
+                                <rect key="frame" x="228" y="318.5" width="107" height="30"/>
+                                <state key="normal" title="Remove banner"/>
+                                <connections>
+                                    <action selector="removeBanner:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eHz-eb-siF"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Banner ad" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WP3-Gq-14V">
+                                <rect key="frame" x="148.5" y="100.5" width="78" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="8cT-3e-Jl8" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" multiplier="3/2" id="3CV-O0-nPK"/>
+                            <constraint firstItem="WP3-Gq-14V" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="1/3" id="3P1-sT-n30"/>
+                            <constraint firstItem="WP3-Gq-14V" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="KEw-37-E28"/>
+                            <constraint firstItem="8cT-3e-Jl8" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="NSR-A0-AwA"/>
+                            <constraint firstItem="TL0-wm-470" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="eRz-yO-pRw"/>
+                            <constraint firstItem="TL0-wm-470" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" multiplier="1/2" id="gSf-ba-Iyz"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="removeBannerButton" destination="8cT-3e-Jl8" id="Uk2-wL-c4o"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
