Interstitial project updated.

--- a/Interstitial/Interstitial/Base.lproj/Main.storyboard
+++ b/Interstitial/Interstitial/Base.lproj/Main.storyboard
@@ -17,9 +17,60 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="39E-p3-qNP">
+                                <rect key="frame" x="66.5" y="318.5" width="55" height="30"/>
+                                <state key="normal" title="Load ad"/>
+                                <connections>
+                                    <action selector="loadNonVideoAd:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nr4-VG-9QJ"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SOt-tq-DY6">
+                                <rect key="frame" x="244.5" y="318.5" width="74" height="30"/>
+                                <state key="normal" title="Present ad"/>
+                                <connections>
+                                    <action selector="presentInterstitial:" destination="BYZ-38-t0r" eventType="touchUpInside" id="z2i-ja-5zF"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Interstitial ad" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BAf-XX-Q3k">
+                                <rect key="frame" x="138" y="100.5" width="99" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="AyQ-rI-VPz">
+                                <rect key="frame" x="208" y="208.5" width="147" height="29"/>
+                                <segments>
+                                    <segment title="Video"/>
+                                    <segment title="NonVideo"/>
+                                </segments>
+                            </segmentedControl>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Which type to load?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="riD-97-VxZ">
+                                <rect key="frame" x="18" y="212" width="152" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="39E-p3-qNP" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="16r-qQ-er5"/>
+                            <constraint firstItem="SOt-tq-DY6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" multiplier="3/2" id="2e4-sK-NhG"/>
+                            <constraint firstItem="BAf-XX-Q3k" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="1/3" id="Kee-B6-8sk"/>
+                            <constraint firstItem="riD-97-VxZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" multiplier="1/2" id="Me8-mC-Loe"/>
+                            <constraint firstItem="riD-97-VxZ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="2/3" id="QL4-Xh-edQ"/>
+                            <constraint firstItem="AyQ-rI-VPz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" multiplier="3/2" id="iOa-8C-38S"/>
+                            <constraint firstItem="39E-p3-qNP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" multiplier="1/2" id="kg5-Sd-vWb"/>
+                            <constraint firstItem="BAf-XX-Q3k" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="o6T-EI-LUG"/>
+                            <constraint firstItem="SOt-tq-DY6" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="sIQ-WI-Zcv"/>
+                            <constraint firstItem="AyQ-rI-VPz" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="2/3" id="vY8-dY-d25"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="interstitialTypeSegmentedControl" destination="AyQ-rI-VPz" id="27Z-Zf-zPp"/>
+                        <outlet property="presentButton" destination="SOt-tq-DY6" id="8Uz-aO-mCf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
