--- a/Banner/Banner/Base.lproj/Main.storyboard
+++ b/Banner/Banner/Base.lproj/Main.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,44 +16,49 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TL0-wm-470">
-                                <rect key="frame" x="51" y="318.5" width="86" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TL0-wm-470">
+                                <rect key="frame" x="0.0" y="318.5" width="187.5" height="30"/>
                                 <state key="normal" title="Load banner"/>
                                 <connections>
                                     <action selector="loadBanner:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XJU-Xh-OW3"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8cT-3e-Jl8">
-                                <rect key="frame" x="228" y="318.5" width="107" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8cT-3e-Jl8">
+                                <rect key="frame" x="187.5" y="318.5" width="187.5" height="30"/>
                                 <state key="normal" title="Remove banner"/>
                                 <connections>
                                     <action selector="removeBanner:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eHz-eb-siF"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Banner ad" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WP3-Gq-14V">
-                                <rect key="frame" x="148.5" y="100.5" width="78" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="S52-7W-oo0">
+                                <rect key="frame" x="122" y="20" width="131" height="32"/>
+                                <segments>
+                                    <segment title="320-50"/>
+                                    <segment title="300-250"/>
+                                </segments>
+                            </segmentedControl>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="8cT-3e-Jl8" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" multiplier="3/2" id="3CV-O0-nPK"/>
-                            <constraint firstItem="WP3-Gq-14V" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="1/3" id="3P1-sT-n30"/>
-                            <constraint firstItem="WP3-Gq-14V" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="KEw-37-E28"/>
-                            <constraint firstItem="8cT-3e-Jl8" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="NSR-A0-AwA"/>
-                            <constraint firstItem="TL0-wm-470" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="eRz-yO-pRw"/>
-                            <constraint firstItem="TL0-wm-470" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" multiplier="1/2" id="gSf-ba-Iyz"/>
+                            <constraint firstItem="8cT-3e-Jl8" firstAttribute="leading" secondItem="TL0-wm-470" secondAttribute="trailing" id="0RK-vz-yjH"/>
+                            <constraint firstItem="S52-7W-oo0" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="2CY-bm-UwW"/>
+                            <constraint firstItem="S52-7W-oo0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3O6-fN-v8g"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8cT-3e-Jl8" secondAttribute="trailing" id="9Nf-jk-eoh"/>
+                            <constraint firstItem="TL0-wm-470" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Zv0-gl-m2c"/>
+                            <constraint firstItem="TL0-wm-470" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="c0i-0A-9Y9"/>
+                            <constraint firstItem="8cT-3e-Jl8" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="hPR-M5-JNf"/>
+                            <constraint firstItem="8cT-3e-Jl8" firstAttribute="width" secondItem="TL0-wm-470" secondAttribute="width" id="leA-Nc-J3f"/>
+                            <constraint firstItem="S52-7W-oo0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="122" id="lm7-ZK-xmq"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="removeBannerButton" destination="8cT-3e-Jl8" id="Uk2-wL-c4o"/>
+                        <outlet property="bannerSegmentSize" destination="S52-7W-oo0" id="0M1-Y3-8FX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="140" y="0.0"/>
         </scene>
     </scenes>
 </document>
