--- a/Interstitial/Interstitial/Base.lproj/Main.storyboard
+++ b/Interstitial/Interstitial/Base.lproj/Main.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,62 +16,49 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="39E-p3-qNP">
-                                <rect key="frame" x="66.5" y="318.5" width="55" height="30"/>
-                                <state key="normal" title="Load ad"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="39E-p3-qNP">
+                                <rect key="frame" x="0.0" y="318.5" width="187.5" height="30"/>
+                                <state key="normal" title="Load interstitial"/>
                                 <connections>
-                                    <action selector="loadNonVideoAd:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nr4-VG-9QJ"/>
+                                    <action selector="loadInterstitial:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Re1-Yn-9lr"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SOt-tq-DY6">
-                                <rect key="frame" x="244.5" y="318.5" width="74" height="30"/>
-                                <state key="normal" title="Present ad"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SOt-tq-DY6">
+                                <rect key="frame" x="187.5" y="318.5" width="187.5" height="30"/>
+                                <state key="normal" title="Present interstitial"/>
                                 <connections>
                                     <action selector="presentInterstitial:" destination="BYZ-38-t0r" eventType="touchUpInside" id="z2i-ja-5zF"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Interstitial ad" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BAf-XX-Q3k">
-                                <rect key="frame" x="138" y="100.5" width="99" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="AyQ-rI-VPz">
-                                <rect key="frame" x="208" y="208.5" width="147" height="29"/>
+                                <rect key="frame" x="102.5" y="20" width="170" height="32"/>
                                 <segments>
+                                    <segment title="Mixed"/>
+                                    <segment title="Static"/>
                                     <segment title="Video"/>
-                                    <segment title="NonVideo"/>
                                 </segments>
                             </segmentedControl>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Which type to load?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="riD-97-VxZ">
-                                <rect key="frame" x="18" y="212" width="152" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="39E-p3-qNP" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="16r-qQ-er5"/>
-                            <constraint firstItem="SOt-tq-DY6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" multiplier="3/2" id="2e4-sK-NhG"/>
-                            <constraint firstItem="BAf-XX-Q3k" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="1/3" id="Kee-B6-8sk"/>
-                            <constraint firstItem="riD-97-VxZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" multiplier="1/2" id="Me8-mC-Loe"/>
-                            <constraint firstItem="riD-97-VxZ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="2/3" id="QL4-Xh-edQ"/>
-                            <constraint firstItem="AyQ-rI-VPz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" multiplier="3/2" id="iOa-8C-38S"/>
-                            <constraint firstItem="39E-p3-qNP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" multiplier="1/2" id="kg5-Sd-vWb"/>
-                            <constraint firstItem="BAf-XX-Q3k" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="o6T-EI-LUG"/>
-                            <constraint firstItem="SOt-tq-DY6" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="sIQ-WI-Zcv"/>
-                            <constraint firstItem="AyQ-rI-VPz" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="2/3" id="vY8-dY-d25"/>
+                            <constraint firstItem="AyQ-rI-VPz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="0tE-ka-UUo"/>
+                            <constraint firstItem="39E-p3-qNP" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="2vp-CC-Ehe"/>
+                            <constraint firstItem="AyQ-rI-VPz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="5Lg-iF-bVn"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="SOt-tq-DY6" secondAttribute="trailing" id="CuT-A7-RgL"/>
+                            <constraint firstItem="SOt-tq-DY6" firstAttribute="width" secondItem="39E-p3-qNP" secondAttribute="width" id="DBg-3P-YJh"/>
+                            <constraint firstItem="SOt-tq-DY6" firstAttribute="leading" secondItem="39E-p3-qNP" secondAttribute="trailing" id="JIJ-0Z-6ah"/>
+                            <constraint firstItem="SOt-tq-DY6" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="KXa-oC-oAk"/>
+                            <constraint firstItem="39E-p3-qNP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="qFs-7o-cSn"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <outlet property="interstitialTypeSegmentedControl" destination="AyQ-rI-VPz" id="27Z-Zf-zPp"/>
-                        <outlet property="presentButton" destination="SOt-tq-DY6" id="8Uz-aO-mCf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="139" y="-2"/>
         </scene>
     </scenes>
 </document>
