--- a/Obj-C/NativeAd/NativeAd/NativeAdViewCell.xib
+++ b/Obj-C/NativeAd/NativeAd/NativeAdViewCell.xib
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="NativeAdViewCellReuseID" rowHeight="375" id="pdd-kb-31s" customClass="NativeAdViewCell" customModule="Sample" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="NativeAdViewCellReuseID" rowHeight="375" id="pdd-kb-31s" customClass="BDMNativeAdViewCell">
             <rect key="frame" x="0.0" y="0.0" width="375" height="375"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="pdd-kb-31s" id="MTM-hC-fLO">
@@ -17,14 +17,14 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bKO-sr-dNY">
-                        <rect key="frame" x="15" y="11" width="70" height="70"/>
+                        <rect key="frame" x="16" y="11" width="70" height="70"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="70" id="07Q-xL-KB6"/>
                             <constraint firstAttribute="height" constant="70" id="ve4-Cy-DlX"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PpE-ER-kdd">
-                        <rect key="frame" x="93" y="11" width="267" height="30"/>
+                        <rect key="frame" x="94" y="11" width="265" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="lb0-86-BeO"/>
                         </constraints>
@@ -33,7 +33,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hho-K8-gTw">
-                        <rect key="frame" x="93" y="51" width="267" height="30"/>
+                        <rect key="frame" x="94" y="51" width="265" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="Ddi-Qo-gmC"/>
                         </constraints>
@@ -42,14 +42,14 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4T1-gi-3N6">
-                        <rect key="frame" x="15" y="89" width="345" height="194"/>
+                        <rect key="frame" x="16" y="89" width="343" height="193"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="4T1-gi-3N6" secondAttribute="height" multiplier="16:9" id="0Yi-Og-6wg"/>
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="callToActionLabel" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0dm-y5-xIu">
-                        <rect key="frame" x="15" y="291" width="345" height="70"/>
+                        <rect key="frame" x="16" y="290" width="343" height="70"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="70" id="9b8-tk-7Ho"/>
                         </constraints>
@@ -76,10 +76,10 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="callToActionLab" destination="0dm-y5-xIu" id="xnF-7f-MmO"/>
-                <outlet property="descriptionLab" destination="hho-K8-gTw" id="Jno-9T-JoQ"/>
-                <outlet property="icon" destination="bKO-sr-dNY" id="hKa-Bw-BRb"/>
-                <outlet property="mediaContainer" destination="4T1-gi-3N6" id="Bzo-Nj-hdr"/>
+                <outlet property="callToActionLab" destination="0dm-y5-xIu" id="AWS-mD-mdV"/>
+                <outlet property="descriptionLab" destination="hho-K8-gTw" id="4HN-Bi-T0Z"/>
+                <outlet property="icon" destination="bKO-sr-dNY" id="VyY-k1-crh"/>
+                <outlet property="mediaContainer" destination="4T1-gi-3N6" id="ElB-xw-z13"/>
                 <outlet property="titleLab" destination="PpE-ER-kdd" id="Lie-vH-O3y"/>
             </connections>
             <point key="canvasLocation" x="119.2" y="261.31934032983509"/>
